src/objects/Site_Master__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site Contact</label>
        <referenceTo>Site_Contact__c</referenceTo>
        <relationshipLabel>Site Master</relationshipLabel>
        <relationshipName>Site_Master</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Site Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Address__c</columns>
        <columns>Latitude__c</columns>
        <columns>Longitude__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SM-{000000}</displayFormat>
        <label>Site Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>